# devops-dreamland-app

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  docker-compose.yaml  flake.nix  gradle.lockfile  gradle.properties  micronaut-cli.yml
.github/workflows/: build.yml  deploy.yml  integrate.yml
dev_tooling/: package-lock.json  package.json
src/: greetings_handler.rs  main.rs  middleware.rs  user_repository.rs
src/init/: mod.rs  telemetry.rs
src/main/kotlin/com/github/tfkhim/devopsdreamland/: Application.kt  HelloController.kt
src/main/resources/: application.yml
src/test/kotlin/com/github/tfkhim/devopsdreamland/: AppTest.kt
