[package]
name = "devops-dreamland-app"
version = "0.4.0"
edition = "2021"
description = "A playground to try out DevOps processes and technologies"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/tfkhim/devops-dreamland-app"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = ["full"]}
tokio = { version = "1.38.0", features = ["full"]}
tower = "0.4.13"

[profile.release]
lto = true
