[package]
name = "devops-dreamland-app"
version = "0.4.3"
edition = "2024"
description = "A playground to try out DevOps processes and technologies"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/tfkhim/devops-dreamland-app"

[dependencies]
axum = "0.8.1"
hyper = { version = "1.6.0", features = ["full"]}
tokio = { version = "1.44.1", features = ["full"]}
tower = "0.5.2"
thiserror = "2.0.12"

[profile.release]
lto = true
