[package]
name = "devops-dreamland-app"
version = "0.5.0"
edition = "2024"
description = "A playground to try out DevOps processes and technologies"
authors = ["Thomas Himmelstoss <9889638+tfkhim@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/tfkhim/devops-dreamland-app"

[dependencies]
axum = "0.8.1"
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version="0.6.2", features = ["trace"] }
thiserror = "2.0.12"
opentelemetry = "0.29.0"
opentelemetry_sdk = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.30.0"

[profile.release]
lto = true
